--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="ana-modified.png"></td>
+            <td><img src="image/ana-modified.png"></td>
             <td>
                 <h1>Anna Górecka</h1>
                 <p><em>specjalista ds. konstrukcji aluminiowych i rozwoju technologii</em></p>
